# the-strip-v0

./: README.md
app/: .env.example  .env.local  .gitignore  fuels.config.ts  lib.tsx  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/.fuels/snapshotDir/: chainConfig.json  stateConfig.json
app/backend/: .env.example  package-lock.json  package.json  tsconfig.json
app/backend/src/: index.ts
app/frontend/: .env.example  .gitignore  package-lock.json  package.json
app/scripts/: .env.example  contract-ids.json  package.json
app/scripts/src/: deploy_usds.ts  mint_usds.ts
contracts/: .fuel-toolchain.toml  Cargo.toml  Forc.toml
contracts/game/: Forc.toml
contracts/game/src/: main.sw
contracts/liquidity_pool/: Forc.toml
contracts/liquidity_pool/src/: main.sw
contracts/liquidity_pool_abi/: Forc.toml
contracts/liquidity_pool_abi/src/: lib.sw
contracts/positional_market/: Forc.toml
contracts/positional_market/src/: main.sw
contracts/tests/: harness.rs
contracts/tests/liquidity_pool/: can_close_round.rs  close_round.rs  deposit.rs  mod.rs  owner.rs  pause.rs  start_vault.rs
contracts/usds/: Forc.toml
contracts/usds/src/: main.sw
docs/: e2e_sequence_diagram.md  game_amm.md  game_market_manager.md  liquidity_pool.md  safe_box.md
frontend/: .env.example  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx
scripts/: .env.example  package.json  tsconfig.json
scripts/src/: deploy_game.ts  deploy_liquidity_pool.ts  deploy_liquidity_pool_and_game.ts  deploy_usds.ts
(+61 files in other folders)
