[package]
name = "the-strip"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Matt <mattauer@umich.edu>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = "0.66.2"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"

[dependencies]
chrono = "0.4.39"
